[B]Advanced Emulator Launcher | version 0.9.3 | XX September 2016[/B]

FEATURE  Setting options to hide [Fav] and [OK] labels in Launcher/Collection/Favourite ROMs.

FEATURE  Setting options to hide Favourites and ROM Collections.

FEATURE  ROM Collections can be imported/exported and shared with other people.

FEATURE  ROM in a Collection can now be edited.

FEATURE  Move ROMs up/down in collections has been moved from Collection ROM context menu into
         Edit ROM in Collection context menu.

FEATURE  Collection ROMs can be placed in any position in the Collection easily via the context
         menu.

FEATURE  Edit ROM -- Edit Metadata shows all available metadata scrapers, not just the one
         selected in settings. The metadata scraper selected in plugin settings is only used
         when scanning ROMs.

FEATURE  Edit ROM -- Edit Assets/Artwork now automatically chooses the scrapers available
         depending on the asset selected.

FIX      Fixed launching of standalone launchers having LNK files in Windows.

FIX      Fixed launching of ROM launchers having LNK files as ROMs in Windows. Any executable can
         be chosen as the launcher program (it will be ignored), expect an LNK file.

FIX      Fix information dialogs in _command_remove_rom() (shown when deleting a ROM).

[B]Advanced Emulator Launcher | version 0.9.2 | 26 September 2016[/B]

FEATURE  Display assets when editing ROMs using the ImgSelectDialog class.

FEATURE  Collection ROMs can be repaired/relinked, like Favourite ROMs.

FEATURE  Versioned ROM storage JSON files for Favourites and ROM Collections.
         NOT COMPATBLE WITH PREVIOUS AEL VERSIONS!

FEATURE  Reorganised context menu in Favourites/Collection ROMs.

FEATURE  Relink Favourite ROMs with Unlinked Launchers or Broken parent ROMs.

FEATURE  Tell if scrapers support asset or not in "Edit ROM" -- "Edit Assets/Artwork..."

FEATURE  TheGamesDB asset scraper working OK.

FEATURE  GameFAQs asset scraper working OK.
